src/app/play-info/play-info.component.css
.discord-widget {
    text-align: center;
}

.social {
    text-align: center;
}

p {
    max-width: 750px;
    text-align: center;
    margin: 20px auto;
}

.section {
    height: 190px;
    background-color: #86452f;
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
    left: 0;
    right: 0;
}

.section-content {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.section-content h2 {
    color: var(--white);
}

.section-left {
    position: relative;
    left: -100px;
    margin-bottom: 60px;
    padding: 20px 20px 20px 100px;
    border-top: 1.5px solid #b99449;
    border-right: 1.5px solid #b99449;
    border-bottom: 1.5px solid #b99449;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    background-color: #86452f;
    background-repeat: no-repeat;
    background-size: cover;
}

@media only screen and (min-width: 992px) {
    .section-left {
        width: 35%;
        z-index: -1;
        position: absolute;
        left: 0;
    }
}

.campaign {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 10px 0;
}

@media only screen and (min-width: 768px) {
    .campaign {
        flex-direction: row;
    }
}

.campaign img {
    width: 320px;
    height: 293px;
    border: 1.5px solid #b99449;
    border-radius: 3px;
}

.campaign span {
    margin-left: 60px;
}

.campaign p {
    font-size: 1rem;
    max-width: 500px;
}

mat-tab-group {
    margin: 30px auto 100px auto;
}

.testimonial-play {
    margin: 0 0 0 auto;
    max-width: 500px;
}

.testimonial-section {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.testimonial-container {
    display: flex;
    flex-direction: column;
    margin-right: auto;
    margin-left: auto;
    
}

@media only screen and (min-width: 992px) {
    .testimonial-container {
        padding-left: 382px;
        max-width: 500px;
    }
}

.testimonial {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.testimonial-icon::before {
    content: "";
    width: 100px;
    height: 100px;
    background-image: radial-gradient(white 40%, transparent 50%);
}

.testimonial-icon {
    width: 100px;
    height: 100px;
    background-size: cover;
    background-repeat: no-repeat;
    display: inline-block;
    z-index: 1;
}

.testimonial span {
    width: 100px;
    height: 100px;
    display: inline-block;
    background-image: radial-gradient(#444444 10%, transparent 70%);
    position: relative;
    bottom: 100px;
    z-index: 0;
}

.testimonial-quote::before {
    content: open-quote;
    font-size: 2.5rem;
    color: var(--gold);
}

.testimonial-quote::after {
    content: close-quote;
    font-size: 2.5rem;
    color: var(--gold);
}

.testimonial-quote {
    display: inline-block;
    margin: 0 0 20px 0;
    line-height: 40px;
    font-size: 1.3rem;
}

.testimonial-name {
    display: inline-block;
    font-style: italic;
    margin: 0 0 20px 0;
    color: #9e9e9e;
    font-size: 1rem;
}

